--- a/Recognizers.Postal/PostalData.tt
+++ b/Recognizers.Postal/PostalData.tt
@@ -6,8 +6,6 @@
 <#@ import namespace="System.IO" #>
 <#@ import namespace="System.Collections.Generic" #>
 <#@ output extensions=".cs" #>
-<# var countries = Countries(); #>
-<# var provinces = Provinces(); #>
 using System;
 using System.Collections.Generic;
 using System.Linq;
@@ -21,28 +19,21 @@ namespace Recognizers.Postal
 	    /// <summary>The map of territories/states/provinces</summary>
 	    public static readonly Dictionary<string, Dictionary<string, string>> Provinces = new Dictionary<string, Dictionary<string, string>>(StringComparer.OrdinalIgnoreCase)
 		{
-<# var country = ""; #>
-<# for (int i = 0; i < provinces.Length - 1; i += 3) { #>
-<#     if (countries.TryGetValue(provinces[i], out var c) && c != country) { #>
-<#		   country = c; #>
-<#         if (i > 3) { #>
+<# foreach (var country in Provinces()) { #>
+           { "<#=country.Key#>", new Dictionary<string, string>(StringComparer.OrdinalIgnoreCase)
+               {
+<#	  foreach (var province in country.Value) { #>
+                   { "<#=province.Key#>", "<#=province.Value#>" },
+<#    } #>
                }
            },
-<#         } #>
-           { "<#=country#>", new Dictionary<string, string>(StringComparer.OrdinalIgnoreCase)
-		       {
-<#     } #>
-                   { "<#=provinces[i+1]#>", "<#=provinces[i+2]#>" },
-                   { "<#=provinces[i+2]#>", "<#=provinces[i+2]#>" },
 <# } #>
-               }
-			}
-		};
+        };
 
 	    /// <summary>The map of countries and country codes.</summary>
 	    public static readonly Dictionary<string, string> Countries = new Dictionary<string, string>(StringComparer.OrdinalIgnoreCase)
 		{
-<# foreach (var x in countries) { #>
+<# foreach (var x in Countries()) { #>
            { "<#=x.Key#>", "<#=x.Value#>" },
 <# } #>
         };
@@ -72,11 +63,24 @@ Dictionary<string, string> Countries()
 	}
 	return map;
 }
-string[] Provinces()
+Dictionary<string, Dictionary<string, string>> Provinces()
 {
 	//from: https://www.cbp.gov/document/guidance/international-stateprovince-codes
-	var provinces = File.ReadAllText(this.Host.ResolvePath("provinces.csv"))
-						.Split(new[] { '\r', '\n', ',' }, StringSplitOptions.RemoveEmptyEntries);
-	return provinces;
+	var provinces = File.ReadAllLines(this.Host.ResolvePath("provinces.csv"))
+						.Select(x => x.Split(new[] { ',' }, StringSplitOptions.None));
+	var countries = Countries();
+	var states = new Dictionary<string, Dictionary<string, string>>(StringComparer.OrdinalIgnoreCase);
+	foreach (var province in provinces)
+	{
+		var name = countries[province[0]];
+		if (!states.TryGetValue(name, out var country))
+			country = states[name] = new Dictionary<string, string>();
+		if (country.ContainsKey(province[1]))
+			throw new Exception($"{province[0]} has a duplicate province {province[1]}, {province[2]}.");
+		country.Add(province[1], province [2]);
+		if (!country.ContainsKey(province[2]))
+			country.Add(province[2], province [2]);
+	}
+	return states;
 }
 #>
